# yumi_ws

./: .gitignore  .gitmodules  Dockerfile  README.md
src/dependencies/picknik_accessories/: README.md  package.xml
src/dependencies/picknik_accessories/mujoco_assets/lab_desk/: desk.xml  desk_globals.xml
src/dependencies/picknik_accessories/mujoco_assets/ridgeback/: ridgeback.xml
src/dependencies/picknik_accessories/mujoco_assets/robotiq_2f85/: robotiq2f85.xml  robotiq2f85_globals.xml
src/dependencies/picknik_accessories/mujoco_assets/ur5e/: ur5e.xml  ur5e_globals.xml
src/yumi_config/: CMakeLists.txt  README.md  package.xml
src/yumi_config/config/: config.yaml
src/yumi_config/config/moveit/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  servo.yaml  yumi.ros2_control.xacro  yumi.srdf  yumi.urdf.xacro
src/yumi_config/objectives/: interpolate_to_joint_state.xml  move_to_joint_state.xml  move_to_pose.xml  move_to_waypoint.xml  scene_camera_snapshot.xml
src/yumi_config/waypoints/: waypoints.yaml
src/yumi_config/yumi_description/urdf/: scene.xml  yumi.transmission.xacro  yumi.urdf  yumi.urdf.xacro  yumi.xacro  yumi.xml
src/yumi_config/yumi_description/urdf/Gazebo/: yumi.gazebo.xacro
src/yumi_config/yumi_description/urdf/Grippers/: yumi_servo_gripper.gazebo.xacro  yumi_servo_gripper.transmission.xacro  yumi_servo_gripper.xacro
src/yumi_config/yumi_description/urdf/meshes/coarse/: body_decimated.stl
