<?xml version="1.0" ?>
<package format="3">
  <name>yumi_config</name>
  <version>6.5.0</version>

  <description>
    Base configuration package for ABB YUMI
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>picknik_accessories</depend>
  <exec_depend>moveit_studio_agent</exec_depend>
  <exec_depend>moveit_studio_behavior</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
